--- a/index.html
+++ b/index.html
@@ -1,20 +1,156 @@
-<!DOCTYPE html>
-<html style="background-color: #000;">
-<head>
-  <title>Dinkle</title>
- </head>
- <body>
-   <p><br>
-  <font face="lucida console" color="a939ff">
-  ...Estableciendo conexión...<br>
-  ...Protocolo Sombra v1.95 iniciado...<br>
-  <!-- Bien hecho, ya tienen mi clave. Hackear este programa de televisión no tuvo chiste. Espérense a lo que sigue.-->
-  <!-- Parece que se están calentando un poco las cosas... tendré que pasar desapercibida mientras esto se finaliza. -->
-  <br>
-  ...Transmitiendo información a ómnicos activos... 71.4669% <br>
-  <br>
-  ...Terminando conexión...
-  </font>
-  </p>
-</body>
+<html>
+	<head>
+		<link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css">
+		<title>Dinkle's Bondage Basement</title>
+		<script src="scripts/jquery-3.1.1.min.js"></script>
+		<script src="scripts/main.js"></script>
+	</head>
+	<body>
+		<div class="wrap">
+			<div class="mainz"><!--
+Header-->
+			<div class="header">
+				<div class="container">
+					<img src="src\logo.png" />
+				</div>
+			</div><!--
+Main-->
+			<div class="main">
+				<div class="container">
+					<div class="overflow">
+					<div id="cont1">
+						<a href="#">
+							<img src="src\main1.png"/>
+						</a>
+							<h1>Read More</h1>
+					</div>
+					<div id="cont2">
+						<a href="#">
+							<img src="src\main2.jpg"/>
+						</a>
+					</div>
+					<div id="cont3">
+						<a href="#">
+							<img src="src\main3.jpg"/>
+						</a>
+					</div>
+				</div>
+				</div>
+			</div><!--
+Ticket-->
+			<div class="ticket">
+				<div class="container">
+					<img src="src\join1.png" />
+					<span>
+						<h2>COPY<br>LINK</h2>
+						<a href="#"><h1>HERE</h1></a>
+					</span>
+				</div>
+			</div><!--
+Display-->
+			<div class="display">
+				<div class="container">
+					<figure>
+						<img src="src\display\display1.jpg">
+						<img src="src\display\display2.jpg">
+						<img src="src\display\display3.jpg">
+						<img src="src\display\display4.jpg">
+						<img src="src\display\display5.jpg">
+					</figure>
+				</div>
+			</div><!--
+Rooms-->
+			<div class="rooms">
+				<div class="container">
+					<div class="room">
+						<h1>Myshornan</h2>
+						<button class="ow-btn">+</button>
+						<ul class="hidden">
+							<li>One</li>
+							<li>Twoo</li>
+							<li>Tree</li>
+						</ul>
+						<div class="imug">
+							<img src="src/bastion.jpg" />
+						</div>
+					</div>
+					<div class="room">
+						<h1>Overwatch</h2>
+						<button class="ow-btn">+</button>
+						<ul class="hidden">
+							<li>One</li>
+							<li>Twoo</li>
+							<li>Tree</li>
+						</ul>
+						<div class="imug">
+							<img src="src/sombra.jpg" />
+						</div>
+					</div>
+					<div class="room">
+						<h1>Don't Starve</h1>
+						<button class="ow-btn">+</button>
+						<ul class="hidden">
+							<li>CS</li>
+							<li>GM</li>
+							<li>YK</li>
+						</ul>
+						<div class="imug">
+							<img src="src/starve.png" />
+						</div>
+					</div>
+					<div class="room">
+						<h1>Counter Strike</h1>
+						<button class="ow-btn">+</button>
+						<ul class="hidden">
+							<li>Boom!</li>
+							<li>Headshot!</li>
+						</ul>
+						<div class="imug">
+							<img id="cs" src="src/nip.jpg" />
+						</div>
+					</div>
+					<div class="room">
+						<h1>Star Citizen</h1>
+						<button class="ow-btn">+</button>
+						<ul class="hidden">
+							<li>Rober Space Industries</li>
+							<li>Aegis Dynamics</li>
+							<li>Anvil Aerospace</li>
+						</ul>
+						<div class="imug">
+							<img src="src/citizen.jpg" />
+						</div>
+					</div>
+					<!--<div class="room">
+					<h1>Room</h1>
+					<button class="ow-btn">+</button>
+					<ul class="hidden">
+						<li></li>
+						<li></li>
+						<li></li>
+					</ul>
+					<div class="imug">
+						<img src="src/" />
+					</div>
+					</div>
+				</div>-->
+				</div>
+			</div>
+		</div>
+	</div><!--
+Footer-->
+		<div class="footer">
+			<div class="container">
+				<ul>
+					<li><a href="#">Contact</a></li>
+					<li><a href="#">Create a ticket</a></li>
+				</ul>
+				<ul>
+					<li><a href="#">Steam Group</a></li>
+					<li><a href="#">YouTube</a></li>
+				</ul>
+				<p>&copy; Dinkle Lawfirm</p>
+			</div>
+		</div>
+	</body>
 </html>
