Added Bootsrap support + small changes

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css">
+		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<title>Dinkle's Bondage Basement</title>
 		<script src="scripts/jquery-3.1.1.min.js"></script>
 		<script src="scripts/main.js"></script>
@@ -17,34 +18,16 @@ Header-->
 Main-->
 			<div class="main">
 				<div class="container">
-					<div class="overflow">
-					<div id="cont1">
-						<a href="#">
-							<img src="src\main1.png"/>
-						</a>
-							<h1>Read More</h1>
+					<h1>Welcome!</h1>
+					<div class="row">
+						<div class="col-md-8">
+							<p class="pull-left">how to dinkle?</p>
+							<span class="glyphicon glyphicon-headphones" aria-hidden="true">
+						</div>
+						<div class="col-md-4">
+							<p>we know how to dinkle</p>
+						</div>
 					</div>
-					<div id="cont2">
-						<a href="#">
-							<img src="src\main2.jpg"/>
-						</a>
-					</div>
-					<div id="cont3">
-						<a href="#">
-							<img src="src\main3.jpg"/>
-						</a>
-					</div>
-				</div>
-				</div>
-			</div><!--
-Ticket-->
-			<div class="ticket">
-				<div class="container">
-					<img src="src\join1.png" />
-					<span>
-						<h2>COPY<br>LINK</h2>
-						<a href="#"><h1>HERE</h1></a>
-					</span>
 				</div>
 			</div><!--
 Display-->
@@ -59,12 +42,31 @@ Display-->
 					</figure>
 				</div>
 			</div><!--
+Ticket-->
+			<div class="ticket">
+				<div class="container">
+					<img src="src\join1.png" />
+					<span>
+						<h2>COPY<br>LINK</h2>
+						<a href="#"><h1>HERE</h1></a>
+					</span>
+				</div>
+			</div><!--
+About-->
+			<div class="about">
+				<div class="container">
+					<h1>ABOUT US</h1>
+					<p>We are a group of friends from different parts of Sweden gathered in a cozy and relaxing
+and comfortable discord channel. Here we play games, chat, study and sometimes we gather around a fireplace to
+tell each other anecdotes about our lives. If you'd like, you can join us aswell (●´ω｀●)</p>
+				</div>
+			</div><!--
 Rooms-->
 			<div class="rooms">
 				<div class="container">
 					<div class="room">
 						<h1>Myshornan</h2>
-						<button class="ow-btn">+</button>
+						<button class="ow-btn"><span class="glyphicon glyphicon-arrow-down"></span></button>
 						<ul class="hidden">
 							<li>One</li>
 							<li>Twoo</li>
@@ -76,7 +78,7 @@ Rooms-->
 					</div>
 					<div class="room">
 						<h1>Overwatch</h2>
-						<button class="ow-btn">+</button>
+						<button class="ow-btn"><span class="glyphicon glyphicon-arrow-down"></span></button>
 						<ul class="hidden">
 							<li>One</li>
 							<li>Twoo</li>
@@ -88,7 +90,7 @@ Rooms-->
 					</div>
 					<div class="room">
 						<h1>Don't Starve</h1>
-						<button class="ow-btn">+</button>
+						<button class="ow-btn"><span class="glyphicon glyphicon-arrow-down"></span></button>
 						<ul class="hidden">
 							<li>CS</li>
 							<li>GM</li>
@@ -100,7 +102,7 @@ Rooms-->
 					</div>
 					<div class="room">
 						<h1>Counter Strike</h1>
-						<button class="ow-btn">+</button>
+						<button class="ow-btn"><span class="glyphicon glyphicon-arrow-down"></span></button>
 						<ul class="hidden">
 							<li>Boom!</li>
 							<li>Headshot!</li>
@@ -111,7 +113,7 @@ Rooms-->
 					</div>
 					<div class="room">
 						<h1>Star Citizen</h1>
-						<button class="ow-btn">+</button>
+						<button class="ow-btn"><span class="glyphicon glyphicon-arrow-down"></span></button>
 						<ul class="hidden">
 							<li>Rober Space Industries</li>
 							<li>Aegis Dynamics</li>
@@ -123,7 +125,7 @@ Rooms-->
 					</div>
 					<!--<div class="room">
 					<h1>Room</h1>
-					<button class="ow-btn">+</button>
+					<button class="ow-btn"><span class="glyphicon glyphicon-arrow-down"></span></button>
 					<ul class="hidden">
 						<li></li>
 						<li></li>
