added indicator to slider

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 Header-->
 			<div class="header">
 				<div class="container">
-					<img src="src\logo.png" />
+				    <img class="img-responsive" src="src\logo.png" />
 				</div>
 			</div><!--
 Navbar header-->
@@ -46,11 +46,11 @@ Navbar Display--><div class="nav" id="nav-display">
 							</div>
 							<div class="col-xs-4 col-centered">
 								<ul>
-									<li><span class="indicator"></span></li>
-									<li><span class="indicator active"></span></li>
-									<li><span class="indicator"></span></li>
-									<li><span class="indicator"></span></li>
-									<li><span class="indicator"></span></li>
+									<li value="1"><span id="indicator1" class="indicator active"></span></li>
+									<li value="2"><span id="indicator2" class="indicator"></span></li>
+									<li value="3"><span id="indicator3" class="indicator"></span></li>
+									<li value="4"><span id="indicator4" class="indicator"></span></li>
+									<li value="5"><span id="indicator5" class="indicator"></span></li>
 								</ul>
 							</div>
 							<div class="col-xs-4 col-centered">
