Fixed right button and added some stylish style

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Header-->
 Navbar header-->
             <div class="nav" id="nav-header">
                 <div class="container">
-                    
+                    <div class="box"></div>
                 </div>
             </div><!--
 Main-->
@@ -42,7 +42,7 @@ Navbar Display--><div class="nav" id="nav-display">
 					<div class="container">
 						<div class="row">
 							<div class="col-xs-4 col-centered">
-								<button id="btn-left" class="btn">left</button>
+								<button id="btn-left" class="btn"><span class="glyphicon glyphicon-chevron-left arrow" aria-hidden="true" ></span></button>
 							</div>
 							<div class="col-xs-4 col-centered">
 								<ul>
@@ -54,7 +54,7 @@ Navbar Display--><div class="nav" id="nav-display">
 								</ul>
 							</div>
 							<div class="col-xs-4 col-centered">
-								<button id="btn-right" class="btn">Right</button>
+								<button id="btn-right" class="btn"><span class="glyphicon glyphicon-chevron-right arrow" aria-hidden="true" ></span></button>
 							</div>
 						</div>
 					</div>
