--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 Header-->
 			<div class="header">
 				<div class="container">
-				    <img class="img-responsive" src="src\logo.png" />
+					<img class="img-responsive" src="src\logo.png" />
 				</div>
 			</div><!--
 Navbar header-->
@@ -25,12 +25,11 @@ Main-->
                         <h1>Welcome to<br>Dinkle's Bondage Basement!</h1>
                     <div class="container">
                         <div class="row">
-                            <div class="col-md-4">
+                            <div class="col-xs-4">
                                 <p class="pull-left">"How to Dinkle?"</p>
-                                <p class="pull-right">"We know how to Dinkle"
-                                <br><i>- Dr.Dinkle</i></p>
+                                <p class="pull-right">"We know how to Dinkle"<br><i>- Dr.Dinkle</i></p>
                             </div>
-                            <div class="col-md-8">
+                            <div class="col-xs-8">
                                 <p>Here at Dinkle's Bondage Basement,<br>we really know how to Dinkle.<br><br>We offer the the dankest memes, the funniest games and the coziest couches. And Believe me, I know couches!</p>
                                 <a href="#"><br>Come join our Discord!</a>
                             </div>
@@ -75,7 +74,7 @@ Display-->
 Ticket-->
 			<div class="ticket">
 				<div class="container">
-					<img src="src\join1.png" />
+					<img class="img-responsive" src="src\join1.png" />
 					<span>
 						<h2>COPY<br>LINK</h2>
 						<a href="#"><h1>HERE</h1></a>
@@ -85,10 +84,14 @@ Ticket-->
 About-->
 			<div class="about">
 				<div class="container">
-					<h1>ABOUT US</h1>
-					<p>We are a group of friends from different parts of Sweden gathered in a cozy and relaxing
-and comfortable discord channel. Here we play games, chat, study and sometimes we gather around a fireplace to
-tell each other anecdotes about our lives. If you'd like, you can join us aswell (●´ω｀●)</p>
+					<div class="row">
+						<div class="col-xs-12">
+							<h1>ABOUT US</h1>
+							<p>We are a group of friends from different parts of Sweden gathered in a cozy and relaxing
+		and comfortable discord channel. Here we play games, chat, study and sometimes we gather around a fireplace to
+		tell each other anecdotes about our lives. If you'd like, you can join us aswell (●´ω｀●)</p>
+						</div>
+					</div>
 				</div>
 			</div><!--
 Rooms-->
@@ -138,7 +141,7 @@ Rooms-->
 							<li>Headshot!</li>
 						</ul>
 						<div class="imug">
-							<img id="cs" src="src/rooms/r6s.jpg" />
+							<img src="src/rooms/r6s.jpg" />
 						</div>
 					</div>
 					<div class="room">
@@ -184,15 +187,23 @@ Rooms-->
 Footer-->
 		<div class="footer">
 			<div class="container">
-				<ul>
-					<li><a href="#">Contact</a></li>
-					<li><a href="#">Create a ticket</a></li>
-				</ul>
-				<ul>
-					<li><a href="#">Steam Group</a></li>
-					<li><a href="#">YouTube</a></li>
-				</ul>
-				<p>&copy; Dinkle Lawfirm</p>
+				<div class="row">
+					<div class="col-xs-3">
+						<ul>
+							<li><a href="#">Contact</a></li>
+							<li><a href="#">Create a ticket</a></li>
+						</ul>
+					</div>
+					<div class="col-xs-3">
+						<ul>
+							<li><a href="#">Steam Group</a></li>
+							<li><a href="#">YouTube</a></li>
+						</ul>
+						</div>
+						<div class="col-xs-6">
+						<p>&copy; Dinkle Lawfirm</p>
+					</div>
+				</div>
 			</div>
 		</div>
 		<script src="scripts/jquery-3.1.1.min.js"></script>
